# gameanalytics-sdk-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build_all.sh  build_android.sh  build_ios.sh  build_macos.sh  setup.py
.github/workflows/: cmake.yml  create_release.yml
include/GameAnalytics/: GATypes.h  GameAnalytics.h
sample_shared/: CMakeLists.txt  Main.cpp
source/gameanalytics/: GACommon.h  GAEvents.cpp  GAEvents.h  GAHTTPApi.h  GALogger.h  GAState.cpp  GAState.h  GAStore.cpp  GAThreading.h  GAUtilities.cpp  GAUtilities.h  GAValidator.cpp  GAValidator.h  GameAnalytics.cpp  GameAnalyticsExtern.cpp  GameAnalyticsExtern.h
source/gameanalytics/Platform/: GAAndroid.cpp  GAAndroid.h  GADevicePlatform.h  GADeviceiOS.h  GADeviceiOS.mm  GALinux.cpp  GALinux.h  GAMacOS.cpp  GAWin32.h  GAiOS.cpp  GAiOS.h
